# note

./: .gitignore  README.md  note.py  pyproject.toml
note/: cli.py
note.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
